style: fix word wrap overflowing

--- a/site/src/component/Review/Review.scss
+++ b/site/src/component/Review/Review.scss
@@ -3,6 +3,8 @@
   border-radius: var(--border-radius);
   padding: 2rem;
   margin-bottom: 3vh;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 // name of the class/professor
 .subreview-identifier {
@@ -12,6 +14,7 @@
   a {
     color: var(--text);
   }
+  word-break: break-word;
 }
 // content of review
 .subreview-content {
@@ -59,6 +62,8 @@
 }
 .subreview-info {
   width: 100%;
+  flex: 1;
+  min-width: 0;
 }
 .subreview-details {
   margin: 1vh 0;
